k8s/client.yaml
apiVersion: v1
kind: Pod
metadata:
    name: client-pod
    labels:
        component: web
spec:
    containers:
        - name: client
          image: jalil/multi-worker
          ports:
              - containerPort: 3000
